# shepherd

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod
cmd/: kernelbalancer.go
config/: config.yml
ebpf/: MakeFile.mk  load_balancer.c
src/: main.cpp
src/ebpf/: xdp_pkt_handler.bpf.c
